# Edges

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/uk/co/wideopentech/edges/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: face_detector.cpp  face_detector.h  native-lib.cpp  processor.cpp  processor.h  processor_factory.cpp  processor_factory.h  processors.cpp  processors.h  renderscript_filters.cpp
app/src/main/java/uk/co/wideopentech/edges/: CameraPreview.java  ConfigActivity.java  ConfigSlider.java  EdgeProcessor.java  EdgesConfig.java  FaceDetector.java  IConfigSliderListener.java  MainActivity.java  ProcessorModel.java  ProcessorModels.java
app/src/main/res/layout/: activity_main.xml  config.xml  config_slider.xml  grid_item_layout.xml
app/src/main/res/menu/: main_activity.xml
app/src/main/res/values/: attr.xml  colors.xml  strings.xml  styles.xml
app/src/main/rs/: band_pass_filter.rs  band_stop_filter.rs  high_pass_filter.rs  low_pass_filter.rs
app/src/test/java/uk/co/wideopentech/edges/: ExampleUnitTest.java
